<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text1"
        android:singleLine="true" 
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text2"
        android:singleLine="true" 
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text3"
        android:singleLine="true" 
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="save"
            android:text="@string/save" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>